--- a/css/styles.css
+++ b/css/styles.css
@@ -78,6 +78,12 @@
   border-radius: 50%;
   height: 350px;
 }
+@media (max-width: 800px) {
+  .avi {
+    height: 150px;
+    width: 200px;
+  }
+}
 body {
   margin: 0;
   font-family: var(--bs-body-font-family);
