hover color changes

--- a/css/styles.css
+++ b/css/styles.css
@@ -11394,8 +11394,8 @@ html {
 
 .sidebar-nav li a:hover {
   text-decoration: none;
-  color: #fff;
-  background: rgba(255, 255, 255, 0.2);
+  color: #0B409C;
+  background: #FDBE34;
 }
 
 .sidebar-nav li a:active,
@@ -11483,7 +11483,7 @@ footer.footer .social-link {
   box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.1);
 }
 footer.footer .social-link:hover {
-  background-color: #155d74;
+  background-color: #0B409C;
   text-decoration: none;
 }
 
